--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 node_modules
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# OS files
+.DS_Store
+
+# Log files
+*.log
+
+# Local configuration
+*.local
