--- a/package.json
+++ b/package.json
@@ -38,22 +38,16 @@
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/vite": "^4.1.7",
-    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
-    "express": "^5.1.0",
     "framer-motion": "^12.15.0",
     "input-otp": "^1.4.2",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.510.0",
-    "mongodb": "^6.17.0",
+    "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
     "react": "^19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
