--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:auth": "vercel dev",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
