--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "vercel-build": "vite build"
+    "vercel-build": "vite build",
+    "db:init": "node scripts/init-db.js",
+    "db:seed": "node scripts/init-db.js"
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.10.0",
