--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:auth": "vercel dev",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "vercel-build": "vite build",
     "db:init": "node scripts/init-db.js",
-    "db:seed": "node scripts/init-db.js"
+    "db:seed": "node scripts/init-db.js",
+    "db:setup": "node scripts/init-database.js"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.10.0",
+    "@clerk/clerk-react": "^5.38.1",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.13",
@@ -42,6 +42,9 @@
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.53.0",
     "@tailwindcss/vite": "^4.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -49,12 +52,10 @@
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.6.0",
-    "express": "^5.1.0",
     "framer-motion": "^12.15.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
     "mongodb": "^6.18.0",
-    "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-day-picker": "9.8.1",
@@ -63,8 +64,8 @@
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
-    "resend": "^4.7.0",
     "sonner": "^2.0.3",
+    "svix": "^1.70.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "vaul": "^1.1.2",
