--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
+  "functions": {
+    "api/webhooks/clerk.js": {
+      "maxDuration": 10
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
       "destination": "/api/$1"
-    },
-    {
-      "source": "/((?!api|assets|favicon.ico).*)",
-      "destination": "/index.html"
     }
   ],
   "headers": [
