--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,19 @@
   "outputDirectory": ".next",
   "installCommand": "pnpm install",
   "framework": "nextjs",
+  "redirects": [
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "www.ailaunch.space"
+        }
+      ],
+      "destination": "https://ailaunch.space/:path*",
+      "permanent": true
+    }
+  ],
   "crons": [
     {
       "path": "/api/cron/competitions",
