--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.910.0",
     "@hookform/resolvers": "^3.10.0",
     "@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -31,6 +32,7 @@
     "react-hook-form": "^7.56.0",
     "react-hot-toast": "^2.4.1",
     "resend": "^6.1.2",
+    "uuid": "^11.1.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
